Messed around with other kinds of properties of the nueral nets, wrote my findings donw

--- a/Exploration-DeepLearning/tutorial_keras.ipynb
+++ b/Exploration-DeepLearning/tutorial_keras.ipynb
@@ -380,6 +380,42 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# My improvements / experiments"
@@ -394,8 +430,85 @@
   {
    "cell_type": "markdown",
    "source": [
+    "***This is where the tutorial ends and we can start having fun messing around with stuff.***"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "First of all, let us fix the damn atrocity that is not splitting the data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "model.add(Dense(8, activation=\"relu\"))\n",
+    "model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "\n",
+    "model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs=150, batch_size=10, verbose=0)\n",
+    "\n",
+    "_, accuracy = model.evaluate(x_test, y_test)\n",
+    "print(f\"Model has accuracy: {accuracy * 100.0:.2f} %\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Group think (ensemble machine learning)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Due to the stochastic nature of backpropagation we can train the model multiple times and it will be slightly different.\n",
-    "This can be advantageous as you can do similar things to ensemble machine learning and stack the outcomes"
+    "This can be advantageous as you can do similar things to ensemble machine learning and stack the outcomes.\n",
+    "I will make a sort of voting classifier that is just a popular vote for an odd number of underlying models (the key is to keep the number odd so as to break tied votes)"
    ],
    "metadata": {
     "collapsed": false,
@@ -421,13 +534,12 @@
     "\n",
     "    model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
     "\n",
-    "    model.fit(X, y, epochs=150, batch_size=10, verbose=0)\n",
+    "    model.fit(x_train, y_train, epochs=150, batch_size=10, verbose=0)\n",
     "\n",
-    "    _, accuracy = model.evaluate(X, y)\n",
-    "    print(f\"Model {i} has accuracy: {accuracy * 100.0:.2f} %\")\n",
+    "    _, accuracy = model.evaluate(x_train, y_train)\n",
     "    key = f\"model_{i}\"\n",
     "    models[key] = model\n",
-    "    predictions[key] = (model.predict(X) > threshold).astype(int)"
+    "    predictions[key] = (model.predict(x_test) > threshold).astype(int)"
    ],
    "metadata": {
     "collapsed": false,
@@ -444,7 +556,7 @@
     "from statistics import mode\n",
     "\n",
     "group_prediction = []\n",
-    "for i in range(0, len(X)):\n",
+    "for i in range(0, len(x_test)):\n",
     "    group_prediction.append(mode([predictions[key][i][0] for key in predictions.keys()]))"
    ],
    "metadata": {
@@ -459,7 +571,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "print(f\"Group think gives us an accuracy of: {100.0 * np.mean(group_prediction == y.astype(int)):.2f} %\")"
+    "print(f\"Group think gives us an accuracy of: {100.0 * np.mean(group_prediction == y_test.astype(int)):.2f} %\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -481,6 +593,499 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Messing with the layers of the neural net"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This test function is just the same as the one in the above section\n",
+    "I wanted to make sure the changes to the model were not flukes so we generate multiple and test the group\n",
+    "In theory this can make us a little more certain that the changes we made were actually meaningful\n",
+    "\n",
+    "To keep with good testing practices, we only want to change one aspect of the experiment at a time.\n",
+    "I have kept the \"control\" model (default from the tutorial) so we can compare performance"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def test_group_of_models(generate_model):\n",
+    "    models = {}\n",
+    "    predictions = {}\n",
+    "\n",
+    "    # Generate multiple models\n",
+    "    for i in range(0, 5):\n",
+    "        model = generate_model()\n",
+    "\n",
+    "        model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "        model.fit(x_train, y_train, epochs=150, batch_size=10, verbose=0)\n",
+    "\n",
+    "        _, accuracy = model.evaluate(x_train, y_train)\n",
+    "        key = f\"model_{i}\"\n",
+    "        models[key] = model\n",
+    "        predictions[key] = (model.predict(x_test) > threshold).astype(int)\n",
+    "\n",
+    "    group_prediction = []\n",
+    "    for i in range(0, len(x_test)):\n",
+    "        group_prediction.append(mode([predictions[key][i][0] for key in predictions.keys()]))\n",
+    "\n",
+    "    print(f\"Group think gives us an accuracy of: {100.0 * np.mean(group_prediction == y_test.astype(int)):.2f} %\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Changing the hidden layer neurons"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(64, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(8, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(64, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(64, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(64, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(64, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(128, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As you can see, by increasing the number of neurons in each layer we have achieved a higher training set accuracy but our test set accuracy has declined\n",
+    "This is due to overfitting and being unable to generalise well.\n",
+    "\n",
+    "The easy cop-out here is to say \"the dataset is really small, what did you expect\" but I think it highlights a flaw of neural nets. They seem to optimise a loss function really well but when it comes to generalising data they have trouble. It could also just be that this particular dataset isn't well suited for neural nets"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Changing the activation functions"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"relu\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(8, activation=\"sigmoid\"))\n",
+    "    model.add(Dense(1, activation=\"relu\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The only thing I really gained from this is that you want to mix and match your activation functions\n",
+    "Having all the same seems to kill your accuracy\n",
+    "\n",
+    "Really should have tested the other kinds of activation functions but I need to look more into them first (some apparently are only for regression)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Changing the number of layers"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def generate_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=8, activation=\"relu\"))\n",
+    "    model.add(Dense(20, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    return model\n",
+    "\n",
+    "test_group_of_models(generate_model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The middle layers seem to do nothing apart from increase the time it takes to train"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
