DS-ReinforcementLearning some updates to the snake game demo

--- a/DS-ReinforcementLearning/tutorial/tutorial.ipynb
+++ b/DS-ReinforcementLearning/tutorial/tutorial.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Imports-and-setup\" data-toc-modified-id=\"Imports-and-setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Imports and setup</a></span></li><li><span><a href=\"#Lunar-Lander-Environment\" data-toc-modified-id=\"Lunar-Lander-Environment-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Lunar Lander Environment</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-do-we-want?\" data-toc-modified-id=\"What-do-we-want?-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>What do we want?</a></span></li><li><span><a href=\"#Start\" data-toc-modified-id=\"Start-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Start</a></span><ul class=\"toc-item\"><li><span><a href=\"#Basic-random-actions\" data-toc-modified-id=\"Basic-random-actions-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Basic random actions</a></span></li><li><span><a href=\"#Basic-algorithm-picking-an-action\" data-toc-modified-id=\"Basic-algorithm-picking-an-action-2.2.2\"><span class=\"toc-item-num\">2.2.2&nbsp;&nbsp;</span>Basic algorithm picking an action</a></span></li></ul></li><li><span><a href=\"#Saving-and-loading-models\" data-toc-modified-id=\"Saving-and-loading-models-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Saving and loading models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Train-and-save-some-PPO-models\" data-toc-modified-id=\"Train-and-save-some-PPO-models-2.3.1\"><span class=\"toc-item-num\">2.3.1&nbsp;&nbsp;</span>Train and save some PPO models</a></span></li><li><span><a href=\"#Train-and-save-some-A2C-models\" data-toc-modified-id=\"Train-and-save-some-A2C-models-2.3.2\"><span class=\"toc-item-num\">2.3.2&nbsp;&nbsp;</span>Train and save some A2C models</a></span></li><li><span><a href=\"#Load-some-models\" data-toc-modified-id=\"Load-some-models-2.3.3\"><span class=\"toc-item-num\">2.3.3&nbsp;&nbsp;</span>Load some models</a></span></li></ul></li></ul></li><li><span><a href=\"#Custom-Environment\" data-toc-modified-id=\"Custom-Environment-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Custom Environment</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-do-we-want?\" data-toc-modified-id=\"What-do-we-want?-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>What do we want?</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Imports-and-setup\" data-toc-modified-id=\"Imports-and-setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Imports and setup</a></span></li><li><span><a href=\"#Lunar-Lander-Environment\" data-toc-modified-id=\"Lunar-Lander-Environment-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Lunar Lander Environment</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-do-we-want?\" data-toc-modified-id=\"What-do-we-want?-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>What do we want?</a></span></li><li><span><a href=\"#Start\" data-toc-modified-id=\"Start-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Start</a></span><ul class=\"toc-item\"><li><span><a href=\"#Basic-random-actions\" data-toc-modified-id=\"Basic-random-actions-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Basic random actions</a></span></li><li><span><a href=\"#Basic-algorithm-picking-an-action\" data-toc-modified-id=\"Basic-algorithm-picking-an-action-2.2.2\"><span class=\"toc-item-num\">2.2.2&nbsp;&nbsp;</span>Basic algorithm picking an action</a></span></li></ul></li><li><span><a href=\"#Saving-and-loading-models\" data-toc-modified-id=\"Saving-and-loading-models-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Saving and loading models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Train-and-save-some-PPO-models\" data-toc-modified-id=\"Train-and-save-some-PPO-models-2.3.1\"><span class=\"toc-item-num\">2.3.1&nbsp;&nbsp;</span>Train and save some PPO models</a></span></li><li><span><a href=\"#Train-and-save-some-A2C-models\" data-toc-modified-id=\"Train-and-save-some-A2C-models-2.3.2\"><span class=\"toc-item-num\">2.3.2&nbsp;&nbsp;</span>Train and save some A2C models</a></span></li><li><span><a href=\"#Load-some-models\" data-toc-modified-id=\"Load-some-models-2.3.3\"><span class=\"toc-item-num\">2.3.3&nbsp;&nbsp;</span>Load some models</a></span></li></ul></li></ul></li><li><span><a href=\"#Custom-Environment\" data-toc-modified-id=\"Custom-Environment-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Custom Environment</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-do-we-want?\" data-toc-modified-id=\"What-do-we-want?-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>What do we want?</a></span><ul class=\"toc-item\"><li><span><a href=\"#Notes:\" data-toc-modified-id=\"Notes:-3.1.1\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>Notes:</a></span></li><li><span><a href=\"#Snake-game-code\" data-toc-modified-id=\"Snake-game-code-3.1.2\"><span class=\"toc-item-num\">3.1.2&nbsp;&nbsp;</span>Snake game code</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -14058,25 +14058,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Notes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Often the hardest part of reinforcement learning is defining your observation space and your reward"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-03-04T04:01:15.425Z"
+    }
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from snake_game import run_game\n"
+   ]
   },
   {
    "cell_type": "code",
